# irrPaint3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  irrPaint3d  irrPaint3d.cpp  irrPaint3d.files  lscm.tex  vcpkg.json
article_lscm/: lscm.lyx
media/: gui.xml
src/: Application.cpp  Application.h  ApplicationDelegate.cpp  ApplicationDelegate.h  IrrlichtEventReceiver.cpp  IrrlichtEventReceiver.h  SaveFileDialog.cpp  SaveFileDialog.h  main.cpp
